# glyphance

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yaml  test.yaml
docs/config/: README.md  glyphance-defs-css-patternproperties.md  glyphance-defs-css.md  glyphance-defs-font-variation-properties-file.md  glyphance-defs-font-variation-properties-variable.md  glyphance-defs-font-variation.md  glyphance-defs-font.md  glyphance-defs-fonts-patternproperties.md  glyphance-defs-fonts.md  glyphance-defs-output-properties-clean.md  glyphance-defs-output-properties-dir.md  glyphance-defs-output-properties-formats-items.md  glyphance-defs-output-properties-formats.md  glyphance-defs-output-properties-prefix.md  glyphance-defs-output-properties-ranges-patternproperties-a-za-z--_-items.md  glyphance-defs-output-properties-ranges-patternproperties-a-za-z--_.md  glyphance-defs-output-properties-ranges-patternproperties.md  glyphance-defs-output-properties-ranges.md  glyphance-defs-output.md  glyphance-defs-range.md  glyphance-defs.md  glyphance-properties-context.md  glyphance.md
src/: cmd_optimise.py  config.py  flags.py  gen_ranges.py  main.py  utils.py
src/assets/: config.schema.yaml  css.template  ranges.json
