[tool.poetry]
name = "glyphance"
version = "1.0.1"
description = ""
authors = ["Niccolo Borgioli <hi@nicco.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cupcakearmy/glyphance"
repository= "https://github.com/cupcakearmy/glyphance"
keywords = ["glyph", "subset", "optimiser", "typography", "utility"]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fonttools = {extras = ["lxml", "ufo", "unicode", "woff"], version = "^4.38.0"}
jsonschema = "^4.17.0"
click = "^8.1.3"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
