[project]
name = "glyphance"
version = "1.1.0"
description = ""
authors = [{ name = "Niccolo Borgioli", email = "hi@nicco.io" }]
requires-python = "~=3.13"
readme = "README.md"
license = "MIT"
keywords = ["glyph", "subset", "optimiser", "typography", "utility"]
dependencies = [
    "requests>=2.28.1,<3",
    "jsonschema>=4.17.0,<5",
    "click>=8.1.8,<9",
    "pyyaml~=6.0",
    "fonttools[ufo,unicode,woff]>=4.57.0",
]

[project.urls]
Homepage = "https://github.com/cupcakearmy/glyphance"
Repository = "https://github.com/cupcakearmy/glyphance"

[tool.ruff.format]
quote-style = "single"
